<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoCatcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_hunts">My Hunts</string>
    <string name="my_hunts_title">My Hunts</string>
    <string name="select_hunt_text">Select A Hunt</string>
    <string name="create_new_hunts">Create New Hunt</string>
    <string name="share_new_hunts">Share Hunts</string>
    <string name="start_hunt_button_text">Start Hunt</string>
    <string name="exit_button_text">Exit</string>
    <string name="title_activity_create_edit_hunts">Edit Hunt</string>
    <string name="checkpoints_title">Scavenger Hunt Checkpoints</string>
    <string name="checkpoints">Checkpoints</string>
    <string name="add_new_checkpoint_button_text">Add This Checkpoint</string>
    <string name="checkpoint_hint">Your Clue Text Here</string>
    <string name="record_location_button_text">Record Location</string>
    <string name="take_picture_button_text">Take Picture</string>
    <string name="record_sound_button_text">Record Sound</string>
    <string name="save_checkpoint_button_text">Save Checkpoint</string>
    <string name="finish_button_text">Finish</string>
    <string name="title_activity_clue_found">Clue Found</string>
    <string name="clue_found_title">Clue Found!!</string>
    <string name="arrived_text">You have arrived! Your next clue:</string>
    <string name="return_button_text">Return</string>
    <string name="view_previous_text">View Previous</string>
    <string name="view_next_text">View Next</string>
    <string name="page_number_text">0/0</string>
    <string name="title_activity_share_hunts">Share a hunt</string>
    <string name="share_hunts_title">Share Hunts:</string>
    <string name="send_a_hunt_message">Send a Hunt:</string>
    <string name="send_button_text">Send This Hunt</string>
    <string name="receive_a_hunt_message">Receive a Hunt:</string>
    <string name="receive_a_hunt_button_text">Receive</string>
    <string name="return_to_menu_text">Return To Menu</string>
    <string name="title_activity_your_location">Your Location</string>
    <string name="your_location_title">Your Location:</string>
    <string name="your_location_found">Found Location:</string>
    <string name="your_location_lat">XX.XXXXXX° Latitude</string>
    <string name="your_location_long">XX.XXXXXX° Longitude</string>
    <string name="my_clues">My Clues</string>
    <string name="exit">Exit</string>
    <string name="title_activity_completion">Hunt Finished</string>
    <string name="hunt_completion_congrats">   You\'ve \nCompleted \n the Hunt!</string>
    <string name="time_to_completion">Your Final Time: 00h 00m 00s</string>
    <string name="clues_found_completion">Total Clues Found:</string>
    <string name="return_to_menu_completion">Return To Menu</string>
    <string name="checkpoint_strgig">Checkpoint </string>
    <string name="Name_your_Hunt">Name Your Hunt</string>
    <string name="hunt_name">Hunt Name</string>
    <string name="please_wait_for_gps">Please try again in a few seconds.</string>
    <string name="please_record_location">Please record a location.</string>
    <string name="clue_String">Clue Filler</string>
    <string name="title_activity_screen_slide">Current Hunt</string>
    <string name="edit_hunt">Edit Hunt</string>
    <string name="update_location">Update Your Location</string>
    <string name="successful_location">Successfully Recorded Location</string>
    <string name="play_sound_button_text">Play recording</string>
    <string name="no_hunts_message">No Hunts</string>
    <string name="hold_devices_message">Hold your devices back-to-back to activate NFC sharing.</string>
    <string name="received_hunt_message">"Received a Hunt!"</string>
    <string name="they_have_no_hunts">They have no hunts!</string>
    <string name="you_need_a_hunt">You need a hunt first.</string>
    <string name="share_hunt_message_complete">Share Complete!</string>
</resources>
