
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="barnes.fahsl.geocatcher.CreateEditHuntsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:text="@string/checkpoints_title"
        android:gravity="center"
        android:id="@+id/scavenger_hunt_checkpoints_title"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/checkpoints"
            android:entries="@array/sample_checkpoints"
            android:layout_marginRight="24dp"
            android:layout_weight="1">

        </Spinner>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_checkpoint_button_text"
            android:id="@+id/addNewCheckpointButton"
            android:layout_weight="1"
            android:layout_gravity="right" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/hint_text_box"
        android:hint="@string/checkpoint_hint"
        android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/samplepicview"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_location_button_text"
        android:id="@+id/recordLocationButton"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture_button_text"
            android:id="@+id/takePictureButton"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_sound_button_text"
            android:id="@+id/recordSoundButton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_checkpoint_button_text"
        android:id="@+id/saveCheckpointButton"
        android:layout_gravity="center_horizontal" />

    <Button
        android:background="@color/primary_dark_material_dark"
        android:textColor="@color/button_material_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_button_text"
        android:id="@+id/finishButton"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
