<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="barnes.fahsl.geocatcher.ShareHuntsActivity"
    android:orientation="vertical"
    android:background="@color/bg_color">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="54sp"
        android:text="@string/share_hunts_title"
        android:layout_gravity="center"
        android:id="@+id/myHuntsTitle"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendAHuntText"
            android:text="@string/send_a_hunt_message"
            android:layout_marginRight="24dp"
            android:textSize="24dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareHuntsSelectHuntSpinner"
            android:entries="@array/sample_hunts">


        </Spinner>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:text="@string/send_button_text"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receiveAHuntText"
            android:text="@string/receive_a_hunt_message"
            android:layout_marginRight="24dp"
            android:textSize="24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receiveButton"
            android:text="@string/receive_a_hunt_button_text"
            android:entries="@array/sample_hunts" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnToMenuFromShareButton"
        android:text="@string/return_to_menu_text"
        android:layout_gravity="center"/>


</LinearLayout>
