<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="barnes.fahsl.geocatcher.YourLocationActivity"
    android:weightSum="1">

    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_location_title"
        android:textSize="40sp"
        android:id="@+id/YourLocationTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_location_lat"
        android:id="@+id/LatitudeTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/your_location_long"
        android:id="@+id/LongitudeTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="297dp"
        android:layout_height="200dp"
        android:id="@+id/compass_your_location"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/compass"
        android:layout_weight="0.19"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/my_clues"
        android:id="@+id/clue_button_your_location"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/exit_your_location"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp" />
</LinearLayout>
