<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="barnes.fahsl.geocatcher.ClueFoundActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:textSize="54sp"
        android:text="@string/clue_found_title"
        android:gravity="center"
        android:id="@+id/clueFoundTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/arrived_text"
        android:gravity="center"
        android:id="@+id/arrivedTextMessage" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/primary_dark_material_dark"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/clueFoundImage"
        android:background="@drawable/title_image"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/primary_dark_material_dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="@string/return_button_text"
        android:id="@+id/returnFromClueFoundButton"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewPreviousText"
            android:text="@string/view_previous_text"/>

        <TextView
            android:layout_weight=".5"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pageNumberText"
            android:text="@string/page_number_text"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewNextText"
            android:text="@string/view_next_text"/>

    </LinearLayout>

</LinearLayout>
