<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GeoCatcherMain"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CreateNewHuntsButton"

        android:layout_marginBottom="161dp"
        android:text="@string/create_new_hunts"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <com.cengalabs.flatui.views.FlatButton

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_hunts_title"
        android:id="@+id/myHuntsButton"
        flatui:fl_textColor="fl_main"
        flatui:fl_theme="@array/grass"
        android:layout_marginTop="50dp"
        android:layout_alignTop="@id/CreateNewHuntsButton"
        android:layout_alignStart="@id/CreateNewHuntsButton"
        android:layout_alignEnd="@id/CreateNewHuntsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_new_hunts"
        android:id="@+id/ShareHuntsButton"

        android:layout_below="@id/myHuntsButton"
        android:layout_alignStart="@id/myHuntsButton"
        android:layout_alignEnd="@id/myHuntsButton" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Main_image_view"
        android:src="@drawable/title_image"
        android:layout_below="@+id/Main_title_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:id="@+id/Main_title_text"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/Main_image_view" />
</RelativeLayout>
