<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_location_title"
            android:id="@+id/locationTextViewFrag"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_location_long"
            android:id="@+id/locationTextViewFragLat"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="40dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_location_long"
            android:id="@+id/locationTextViewFragLong"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id = "@+id/updatelocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_location"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/HintViewIndClue"


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clue_String"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:layout_marginTop="50dp"/>
        <ImageView
            android:id="@+id/imageViewIndClue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="30dp"/>
    </LinearLayout>
</ScrollView>
