<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="barnes.fahsl.geocatcher.CompletionActivity"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hunt_completion_congrats"
        android:id="@+id/CompletionTextView"
        android:textSize="55sp"
        android:layout_marginTop="30dp"/>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text=" "-->
        <!--android:id="@+id/time_of_completion"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textIsSelectable="false"-->
        <!--android:layout_marginTop="40dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/clues_found_completion"
        android:id="@+id/clues_found"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_menu_completion"
        android:id="@+id/returnToMenuFromComplete"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp" />

</LinearLayout>
